--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ body {
     padding-top: 80px;
 }
 
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--negative-color);
+}
+
 /* -------------------------------------------------------------------------------- */
 /* ! Color */
 /* -------------------------------------------------------------------------------- */
@@ -36,6 +42,13 @@ body {
 /* -------------------------------------------------------------------------------- */
 .container {
     padding: 20px;
+    width: 100%;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 section {
@@ -81,11 +94,27 @@ header {
     width: 100%;
     color: var(--negative-color);
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
+}
+
+nav .icon-hamburger {
+    font-size: 1.7rem;
 }
 
 nav>ul {
     display: none;
+}
+
+nav ul li a:not(.btn) {
+    padding: 0 15px;
+}
+
+.debug-g {
+    border: 1px solid green;
+}
+
+li a {
+    height: 90px;
 }
 
 /* -------------------------------------------------------------------------------- */
@@ -94,4 +123,18 @@ nav>ul {
 footer {
     background-color: var(--footer-color);
     color: var(--negative-color);
+}
+
+/* -------------------------------------------------------------------------------- */
+/* ! MEDIA QUERY */
+/* -------------------------------------------------------------------------------- */
+/* desktop */
+@media screen and (min-width: 1200px) {
+    .icon-hamburger {
+        display: none;
+    }
+
+    nav>ul {
+        display: flex;
+    }
 }
