--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ section {
 .btn {
     background-color: var(--negative-color);
     color: var(--main-color);
-    border-radius: 20px;
-    padding: 25px 0px;
+    border-radius: 30px;
+    padding: 10px 20px;
 }
 
 /* -------------------------------------------------------------------------------- */
@@ -116,6 +116,7 @@ nav>ul {
 nav ul li a {
     padding: 20px 15px;
     display: inline-block;
+    align-items: center;
 }
 
 /* nav ul li a .btn {
