--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,12 @@ nav ul li a {
     align-items: center;
 }
 
+nav ul li a.btn {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 /* -------------------------------------------------------------------------------- */
 /* ! Footer */
 -------------------------------------------------------------------------------- footer {
